fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -357,8 +357,7 @@ li {
 
 .section {
   padding: 2rem 0 7rem 0;
-
-  
+  overflow-x: hidden;  
 }
 
 .about {
